[tool.poetry]
name = "pets"
version = "0.1.0"
description = ""
authors = ["gr33n-made <dimitriy_rudenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
py-polars = "^0.8.10"
matplotlib = "jupyter-notebook"
jupyter = "^1.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
